[gd_scene load_steps=44 format=3 uid="uid://b4vhq5v4rif8w"]

[ext_resource type="Script" path="res://scenes/entities/player.gd" id="1_i7vlu"]
[ext_resource type="Texture2D" uid="uid://beps5ckgepydn" path="res://sprites/player/idle/idle00.png" id="2_5qau7"]
[ext_resource type="Texture2D" uid="uid://bckuh4sjn01xi" path="res://sprites/player/climb/climb00.png" id="2_5raan"]
[ext_resource type="Texture2D" uid="uid://buwntvddnvnep" path="res://sprites/player/idle/idle01.png" id="3_456ur"]
[ext_resource type="Texture2D" uid="uid://dmqjl4w4yroos" path="res://sprites/player/climb/climb01.png" id="3_vy5vy"]
[ext_resource type="Texture2D" uid="uid://bfv3t8gamk4df" path="res://sprites/player/idle/idle02.png" id="4_g84bt"]
[ext_resource type="Texture2D" uid="uid://budrjfdug8dj5" path="res://sprites/player/climb/climb02.png" id="4_og2x0"]
[ext_resource type="Texture2D" uid="uid://bo3d5ec70nttq" path="res://sprites/player/idle/idle03.png" id="5_h8sbp"]
[ext_resource type="Texture2D" uid="uid://dlgq40qkivkxa" path="res://sprites/player/climb/climb03.png" id="5_t8lym"]
[ext_resource type="Texture2D" uid="uid://cs4cpr6s5wmmi" path="res://sprites/player/climb/climb04.png" id="6_2b2ak"]
[ext_resource type="Texture2D" uid="uid://bhpakmds1uji1" path="res://sprites/player/idle/idle04.png" id="6_v6gyw"]
[ext_resource type="Texture2D" uid="uid://c6t4dout0dtgo" path="res://sprites/player/idle/idle05.png" id="7_2xr4t"]
[ext_resource type="Texture2D" uid="uid://cho3b3p2nhh3x" path="res://sprites/player/climb/climb05.png" id="7_f4ute"]
[ext_resource type="Texture2D" uid="uid://bnp2e23i2mv6t" path="res://sprites/player/idle/idle06.png" id="8_0o8fn"]
[ext_resource type="Texture2D" uid="uid://brhq2mhi3hq1u" path="res://sprites/player/idle/idle07.png" id="9_am5i6"]
[ext_resource type="Texture2D" uid="uid://cihk5w6orbug" path="res://sprites/player/idle/idle08.png" id="10_8ja58"]
[ext_resource type="Texture2D" uid="uid://b4xgdw5igttkr" path="res://sprites/player/jump/jumpSlow00.png" id="26_43538"]
[ext_resource type="Texture2D" uid="uid://m00aaw0ro6vg" path="res://sprites/player/jump/jumpSlow01.png" id="27_bh0u8"]
[ext_resource type="Texture2D" uid="uid://cv6ov60arx4yc" path="res://sprites/player/jump/jumpSlow02.png" id="28_h3vvr"]
[ext_resource type="Texture2D" uid="uid://b2xf5edgidsk5" path="res://sprites/player/jump/jumpSlow03.png" id="29_6jgho"]
[ext_resource type="Texture2D" uid="uid://tm2wc5ht4glw" path="res://sprites/player/walk/walk00.png" id="30_ghg55"]
[ext_resource type="Texture2D" uid="uid://d3ucen2mkwh3v" path="res://sprites/player/walk/walk01.png" id="31_sjlh8"]
[ext_resource type="Texture2D" uid="uid://bjma3wloahvvu" path="res://sprites/player/walk/walk02.png" id="32_2wohv"]
[ext_resource type="Texture2D" uid="uid://b37hqwpmnimj2" path="res://sprites/player/walk/walk03.png" id="33_qt0hg"]
[ext_resource type="Texture2D" uid="uid://b0rjtcjr3ykgd" path="res://sprites/player/walk/walk04.png" id="34_06pp1"]
[ext_resource type="AudioStream" uid="uid://dr3ol63qk2tes" path="res://music/dash_red_left.wav" id="34_t1a8u"]
[ext_resource type="AudioStream" uid="uid://da0narvjanii6" path="res://music/jump.wav" id="35_piljh"]
[ext_resource type="Texture2D" uid="uid://dm8inbfw45e06" path="res://sprites/player/walk/walk05.png" id="35_t1385"]
[ext_resource type="Texture2D" uid="uid://dd2del3d5wws6" path="res://sprites/player/walk/walk06.png" id="36_42qdl"]
[ext_resource type="AudioStream" uid="uid://bp7jwvts2858g" path="res://music/jump_wall_left.wav" id="36_cb7as"]
[ext_resource type="Texture2D" uid="uid://cg18a6gedylmq" path="res://sprites/player/walk/walk07.png" id="37_263ky"]
[ext_resource type="AudioStream" uid="uid://dnj0acs16cqn7" path="res://music/foot_03_wood_03.wav" id="37_gesf5"]
[ext_resource type="Script" path="res://scenes/entities/hair.gd" id="37_k3g65"]
[ext_resource type="Texture2D" uid="uid://cfyivnlv6pyvf" path="res://sprites/player/walk/walk08.png" id="38_15i4b"]
[ext_resource type="AudioStream" uid="uid://byekqjn1eadjl" path="res://music/death.wav" id="38_a305i"]
[ext_resource type="Texture2D" uid="uid://d3vc6cscuc5gp" path="res://sprites/player/walk/walk09.png" id="39_gq041"]
[ext_resource type="AudioStream" uid="uid://vqohi1duumib" path="res://music/wallslide_general.wav" id="39_vtrlu"]
[ext_resource type="Texture2D" uid="uid://ccr5pdxktw43q" path="res://sprites/player/walk/walk10.png" id="40_3amse"]
[ext_resource type="AudioStream" uid="uid://dk2co6sreg3j0" path="res://music/strawberry_red_get_1000.wav" id="40_kcwmb"]
[ext_resource type="AudioStream" uid="uid://8l2bblls2qx6" path="res://music/revive.wav" id="41_j740i"]
[ext_resource type="Texture2D" uid="uid://bnkgsetsg1krh" path="res://sprites/player/walk/walk11.png" id="41_udrxu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_j8yum"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5raan")
}, {
"duration": 1.0,
"texture": ExtResource("3_vy5vy")
}, {
"duration": 1.0,
"texture": ExtResource("4_og2x0")
}, {
"duration": 1.0,
"texture": ExtResource("5_t8lym")
}, {
"duration": 1.0,
"texture": ExtResource("6_2b2ak")
}, {
"duration": 1.0,
"texture": ExtResource("7_f4ute")
}],
"loop": true,
"name": &"climb",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5qau7")
}, {
"duration": 1.0,
"texture": ExtResource("3_456ur")
}, {
"duration": 1.0,
"texture": ExtResource("4_g84bt")
}, {
"duration": 1.0,
"texture": ExtResource("5_h8sbp")
}, {
"duration": 1.0,
"texture": ExtResource("6_v6gyw")
}, {
"duration": 1.0,
"texture": ExtResource("7_2xr4t")
}, {
"duration": 1.0,
"texture": ExtResource("8_0o8fn")
}, {
"duration": 1.0,
"texture": ExtResource("9_am5i6")
}, {
"duration": 1.0,
"texture": ExtResource("10_8ja58")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("26_43538")
}, {
"duration": 1.0,
"texture": ExtResource("27_bh0u8")
}, {
"duration": 1.0,
"texture": ExtResource("28_h3vvr")
}, {
"duration": 1.0,
"texture": ExtResource("29_6jgho")
}],
"loop": true,
"name": &"jump",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("30_ghg55")
}, {
"duration": 1.0,
"texture": ExtResource("31_sjlh8")
}, {
"duration": 1.0,
"texture": ExtResource("32_2wohv")
}, {
"duration": 1.0,
"texture": ExtResource("33_qt0hg")
}, {
"duration": 1.0,
"texture": ExtResource("34_06pp1")
}, {
"duration": 1.0,
"texture": ExtResource("35_t1385")
}, {
"duration": 1.0,
"texture": ExtResource("36_42qdl")
}, {
"duration": 1.0,
"texture": ExtResource("37_263ky")
}, {
"duration": 1.0,
"texture": ExtResource("38_15i4b")
}, {
"duration": 1.0,
"texture": ExtResource("39_gq041")
}, {
"duration": 1.0,
"texture": ExtResource("40_3amse")
}, {
"duration": 1.0,
"texture": ExtResource("41_udrxu")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wtf51"]
radius = 33.3333
height = 66.6667

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.3, 0.3)
collision_layer = 10
collision_mask = 7
script = ExtResource("1_i7vlu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 2.6226e-06)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_j8yum")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.33333, 50)
shape = SubResource("CapsuleShape2D_wtf51")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.7, 0.7)
drag_vertical_enabled = true
drag_top_margin = 0.3
drag_bottom_margin = 0.3

[node name="Hair" type="Node2D" parent="."]
show_behind_parent = true
position = Vector2(17, 50)
scale = Vector2(0.4, 0.4)
script = ExtResource("37_k3g65")

[node name="Dash_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("34_t1a8u")

[node name="Jump_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("35_piljh")
volume_db = -3.731

[node name="Wall_Jump_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("36_cb7as")

[node name="Walk_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("37_gesf5")
volume_db = -12.592

[node name="Death_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("38_a305i")

[node name="Wall_slide_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("39_vtrlu")
pitch_scale = 0.37

[node name="Win_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("40_kcwmb")

[node name="Revive_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("41_j740i")
